# routes/index.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 import auth from "./auth";
 import user from "./user";
 import channel from "./channel";
+import note from "./note";
 import { errorMiddleware } from "../utils/error";
 
 const router = Router();
@@ -11,6 +12,8 @@ router.use("/auth", auth);
 router.use("/user", user);
 
 router.use("/channel", channel);
+
+router.use("/note", note);
 
 router.use(errorMiddleware);
 
